2001-03-04  Gary Houston  <ghouston@arglist.com>

	* socket.c (scm_fill_sockaddr): don't allow buffer overflows when
	taking an unexpectedly large filename for an AF_UNIX socket from
	bind/connect/sendto (thanks to Martin Grabmueller).
	
	* socket.c (scm_sock_fd_to_port, SCM_SOCK_FD_TO_PORT): removed the
	former and adjusted the latter.
	(scm_socket, scm_socketpair): cosmetic changes.
	(scm_getsockopt, scm_setsockopt): declare optlen as int, not
	size_t as socklen_t substitute.  don't restrict args/return values
	to INUM: allow full range of int or size_t.
	(scm_fill_sockaddr): check arguments before allocating memory, to
	avoid leakage.  use malloc, not scm_must_malloc.
	(scm_connect, scm_bind, scm_sendto): use int, not size_t as socklen_t
	substitute.  free the sockaddr structure before throwing an error.
	(scm_init_add_buffer): procedure removed, together with its static
	buffer scm_addr_buffer, which wouldn't be thread safe.  instead,
	define a macro MAX_ADDR_SIZE and declare the buffer where needed.
	(scm_accept, scm_getpeername, scm_getsockname, scm_recvfrom,
	scm_sendto): use a local buffer instead of scm_addr_buffer.
	adjust for new SCM_SOCK_FD_TO_PORT.  use int for address size,
	not size_t.
	(scm_recvfrom): set addr->sa_family to AF_UNSPEC before the recvfrom
	call to detect whether recvfrom could be bothered to set the address.
	(scm_init_socket): don't call scm_init_addr_buffer.

2001-03-04  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* debug.c (scm_procedure_source, scm_procedure_environment),
	print.c (scm_get_print_state), ramap.c (scm_array_fill_int,
	scm_array_index_map_x), sort.c (scm_sort_x, scm_sort,
	scm_stable_sort_x, scm_stable_sort), stacks.c (scm_make_stack,
	scm_last_stack_frame), symbols.c (scm_sym2vcell, scm_sym2ovcell),
	unif.c (scm_list_to_uniform_array, scm_uniform_vector_length,
	scm_transpose_array, scm_enclose_array, scm_array_in_bounds_p,
	scm_uniform_vector_ref, scm_array_set_x, scm_uniform_array_read_x,